--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cra-template": "1.2.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
